WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279988
[WPE] Compilation error ‘uniqueLogIdentifier’ is not a member of ‘WTF::LoggerHelper’
https://bugs.webkit.org/show_bug.cgi?id=279988
Summary
[WPE] Compilation error ‘uniqueLogIdentifier’ is not a member of ‘WTF::Logger...
tusooa
Reported
2024-09-19 09:12:08 PDT
Not sure if it is because I disabled journald (I don't have systemd) Configuration: ] CC=/usr/lib/ccache/bin/cc CXX=/usr/lib/ccache/bin/c++ cmake -DPORT=WPE -DCMAKE_BUILD_TYPE=RelWithDebInfo -GNinja -DUSE_LIBBACKTRACE=OFF -DUSE_SYSTEM_SYSPROF_CAPTURE=NO -DUSE_QT6=ON -DENABLE_JOURNALD_LOG=OFF .. Build result: ] ninja [0/2] Re-checking globbed directories... [1/2] Re-running CMake... -- The CMake build type is: RelWithDebInfo -- Enabling ccache: Setting ccache prefix for compiler. -- Linker variant in use: BFD -- Linker supports thin archives - TRUE -- Linker supports split debug info - TRUE -- Linker supports --gdb-index - FALSE -- Linker supports --disable-new-dtags - TRUE -- Linker supports --gc-sections - TRUE -- Archiver variant in use: BFD -- Archiver supports thin archives - TRUE -- Found hb-features.h -- Found the following HarfBuzz libraries: -- HarfBuzz (required): /usr/lib64/libharfbuzz.so -- ICU (required): /usr/lib64/libharfbuzz-icu.so -- Found the following WebP libraries: -- WebP (required): /usr/lib64/libwebp.so -- demux (required): /usr/lib64/libwebpdemux.so -- Found glib-compile-resources (required): /usr/bin/glib-compile-resources (2.78.6) -- Disabling USE_GSTREAMER_WEBRTC since ENABLE_WEB_RTC is disabled. -- Found the following WOFF2 libraries: -- WOFF2 (required): /usr/lib64/libwoff2common.so -- dec (required): /usr/lib64/libwoff2dec.so -- Checking for module 'gstreamer-full-1.0>=1.17.0' -- Package 'gstreamer-full-1.0' not found -- Platform-specific CMakeLists not found: /home/user/Code/WebKit/Source/bmalloc/PlatformWPE.cmake -- Using platform-specific CMakeLists: /home/user/Code/WebKit/Source/WTF/wtf/PlatformWPE.cmake -- Copying generate-unified-source-bundles.rb to: /home/user/Code/WebKit/build/WTF/Scripts -- Using platform-specific CMakeLists: /home/user/Code/WebKit/Source/JavaScriptCore/PlatformWPE.cmake -- Enabling asm postprocessing -- Using source list file: Sources.txt -- Using source list file: inspector/remote/SourcesGLib.txt -- Using platform-specific CMakeLists: /home/user/Code/WebKit/Source/JavaScriptCore/shell/PlatformWPE.cmake -- Using platform-specific CMakeLists: /home/user/Code/WebKit/Source/ThirdParty/ANGLE/PlatformWPE.cmake -- Found the following WebP libraries: -- WebP (required): /usr/lib64/libwebp.so -- mux (required): /usr/lib64/libwebpmux.so -- Using platform-specific CMakeLists: /home/user/Code/WebKit/Source/WebInspectorUI/PlatformWPE.cmake -- Using platform-specific CMakeLists: /home/user/Code/WebKit/Source/WebCore/PAL/pal/PlatformWPE.cmake -- Using platform-specific CMakeLists: /home/user/Code/WebKit/Source/WebCore/PlatformWPE.cmake -- Using source list file: Sources.txt -- Using source list file: platform/SourcesAdwaita.txt -- Using source list file: platform/SourcesSkia.txt -- Using source list file: platform/SourcesGCrypt.txt -- Using source list file: platform/SourcesGStreamer.txt -- Using source list file: platform/SourcesSoup.txt -- Using source list file: platform/SourcesNicosia.txt -- Using source list file: SourcesWPE.txt -- Using source list file: platform/SourcesGLib.txt -- Using platform-specific CMakeLists: /home/user/Code/WebKit/Source/WebKit/PlatformWPE.cmake -- Using source list file: Sources.txt -- Using source list file: Platform/Sources.txt -- Using source list file: SourcesWPE.txt -- Using platform-specific CMakeLists: /home/user/Code/WebKit/Source/WebDriver/PlatformWPE.cmake -- Using platform-specific CMakeLists: /home/user/Code/WebKit/Source/PlatformWPE.cmake -- Using platform-specific CMakeLists: /home/user/Code/WebKit/Tools/PlatformWPE.cmake -- Enabled features: -- ENABLE_BUBBLEWRAP_SANDBOX ..................... ON -- ENABLE_DOCUMENTATION ON -- ENABLE_ENCRYPTED_MEDIA ........................ OFF -- ENABLE_GAMEPAD ON -- ENABLE_INTROSPECTION .......................... ON -- ENABLE_JOURNALD_LOG OFF -- ENABLE_PDFJS .................................. ON -- ENABLE_VIDEO ON -- ENABLE_WEBDRIVER .............................. ON -- ENABLE_WEB_AUDIO ON -- ENABLE_WPE_1_1_API ............................ OFF -- ENABLE_WPE_PLATFORM OFF -- ENABLE_WPE_PLATFORM_DRM ....................... OFF -- ENABLE_WPE_PLATFORM_HEADLESS OFF -- ENABLE_WPE_PLATFORM_WAYLAND ................... OFF -- ENABLE_WPE_QT_API OFF -- ENABLE_XSLT ................................... ON -- USE_ATK ON -- USE_AVIF ...................................... ON -- USE_GBM ON -- USE_GSTREAMER_TRANSCODER ...................... ON -- USE_GSTREAMER_WEBRTC OFF -- USE_JPEGXL .................................... ON -- USE_LCMS ON -- USE_LIBBACKTRACE .............................. OFF -- USE_LIBDRM ON -- USE_QT6 ....................................... ON -- USE_WOFF2 ON -- Configuring done (4.3s) -- Generating done (4.4s) -- Build files have been written to: /home/user/Code/WebKit/build [0/2] Re-checking globbed directories... [1019/1268] Building CXX object Source/WebKit/CMakeFiles/WebKit.dir/__/__/DerivedSources/WebKit/unified-sources/UnifiedSource-13fb4697-10.cpp.o FAILED: Source/WebKit/CMakeFiles/WebKit.dir/__/__/DerivedSources/WebKit/unified-sources/UnifiedSource-13fb4697-10.cpp.o /usr/bin/ccache /usr/bin/c++ -DBUILDING_WEBKIT=1 -DBUILDING_WITH_CMAKE=1 -DBUILDING_WPE__=1 -DBUILDING_WebKit -DBWRAP_EXECUTABLE=\"/usr/bin/bwrap\" -DDATADIR=\"/usr/local/share\" -DDBUS_PROXY_EXECUTABLE=\"/usr/bin/xdg-dbus-proxy\" -DGETTEXT_PACKAGE=\"WPE\" -DHAVE_CONFIG_H=1 -DJSC_GLIB_API_ENABLED -DLIBDIR=\"/usr/local/lib64\" -DLOCALEDIR=\"/usr/local/share/locale\" -DPAS_BMALLOC=1 -DPKGLIBDIR=\"/usr/local/lib64/wpe-webkit-2.0\" -DPKGLIBEXECDIR=\"/usr/local/libexec/wpe-webkit-2.0\" -DSK_ASSUME_GL=0 -DSK_ASSUME_GL_ES=1 -DSK_ASSUME_WEBGL=0 -DSK_DISABLE_LEGACY_GL_MAKE_NATIVE_INTERFACE -DSK_DISABLE_LEGACY_IMAGE_READBUFFER -DSK_DISABLE_LEGACY_INIT_DECODERS -DSK_DISABLE_LEGACY_PNG_WRITEBUFFER -DSK_DISABLE_TRACING -DSK_DISABLE_WEBGL_INTERFACE -DSK_ENABLE_PRECOMPILE -DSK_R32_SHIFT=16 -DSK_RELEASE -DSTATICALLY_LINKED_WITH_JavaScriptCore -DSTATICALLY_LINKED_WITH_PAL -DSTATICALLY_LINKED_WITH_WTF -DSTATICALLY_LINKED_WITH_WebCore -DSTATICALLY_LINKED_WITH_bmalloc -DUSE_SYSTEM_EGL -DWebKit_EXPORTS -I/home/user/Code/WebKit/build -I/home/user/Code/WebKit/build/PAL/Headers -I/home/user/Code/WebKit/build/WebCore/PrivateHeaders -I/home/user/Code/WebKit/build/DerivedSources/ForwardingHeaders -I/home/user/Code/WebKit/build/DerivedSources/WebKit -I/home/user/Code/WebKit/build/DerivedSources/WebKit/include -I/home/user/Code/WebKit/Source/WebKit -I/home/user/Code/WebKit/Source/WebKit/GPUProcess -I/home/user/Code/WebKit/Source/WebKit/GPUProcess/ShapeDetection -I/home/user/Code/WebKit/Source/WebKit/GPUProcess/graphics -I/home/user/Code/WebKit/Source/WebKit/GPUProcess/graphics/WebGPU -I/home/user/Code/WebKit/Source/WebKit/GPUProcess/media -I/home/user/Code/WebKit/Source/WebKit/GPUProcess/webrtc -I/home/user/Code/WebKit/Source/WebKit/ModelProcess -I/home/user/Code/WebKit/Source/WebKit/NetworkProcess -I/home/user/Code/WebKit/Source/WebKit/NetworkProcess/Classifier -I/home/user/Code/WebKit/Source/WebKit/NetworkProcess/Cookies -I/home/user/Code/WebKit/Source/WebKit/NetworkProcess/CustomProtocols -I/home/user/Code/WebKit/Source/WebKit/NetworkProcess/Downloads -I/home/user/Code/WebKit/Source/WebKit/NetworkProcess/FileAPI -I/home/user/Code/WebKit/Source/WebKit/NetworkProcess/IndexedDB -I/home/user/Code/WebKit/Source/WebKit/NetworkProcess/Notifications -I/home/user/Code/WebKit/Source/WebKit/NetworkProcess/PrivateClickMeasurement -I/home/user/Code/WebKit/Source/WebKit/NetworkProcess/ServiceWorker -I/home/user/Code/WebKit/Source/WebKit/NetworkProcess/SharedWorker -I/home/user/Code/WebKit/Source/WebKit/NetworkProcess/cache -I/home/user/Code/WebKit/Source/WebKit/NetworkProcess/storage -I/home/user/Code/WebKit/Source/WebKit/NetworkProcess/watchos -I/home/user/Code/WebKit/Source/WebKit/NetworkProcess/webrtc -I/home/user/Code/WebKit/Source/WebKit/NetworkProcess/webtransport -I/home/user/Code/WebKit/Source/WebKit/Platform -I/home/user/Code/WebKit/Source/WebKit/Platform/IPC -I/home/user/Code/WebKit/Source/WebKit/PluginProcess -I/home/user/Code/WebKit/Source/WebKit/Shared -I/home/user/Code/WebKit/Source/WebKit/Shared/API -I/home/user/Code/WebKit/Source/WebKit/Shared/API/c -I/home/user/Code/WebKit/Source/WebKit/Shared/ApplePay -I/home/user/Code/WebKit/Source/WebKit/Shared/Authentication -I/home/user/Code/WebKit/Source/WebKit/Shared/CoreIPCSupport -I/home/user/Code/WebKit/Source/WebKit/Shared/Databases -I/home/user/Code/WebKit/Source/WebKit/Shared/Databases/IndexedDB -I/home/user/Code/WebKit/Source/WebKit/Shared/Extensions -I/home/user/Code/WebKit/Source/WebKit/Shared/FileAPI -I/home/user/Code/WebKit/Source/WebKit/Shared/graphics -I/home/user/Code/WebKit/Source/WebKit/Shared/Gamepad -I/home/user/Code/WebKit/Source/WebKit/Shared/Notifications -I/home/user/Code/WebKit/Source/WebKit/Shared/RemoteLayerTree -I/home/user/Code/WebKit/Source/WebKit/Shared/WebGPU -I/home/user/Code/WebKit/Source/WebKit/Shared/WebsiteData -I/home/user/Code/WebKit/Source/WebKit/Shared/XR -I/home/user/Code/WebKit/Source/WebKit/UIProcess -I/home/user/Code/WebKit/Source/WebKit/UIProcess/API -I/home/user/Code/WebKit/Source/WebKit/UIProcess/API/C -I/home/user/Code/WebKit/Source/WebKit/UIProcess/API/cpp -I/home/user/Code/WebKit/Source/WebKit/UIProcess/Authentication -I/home/user/Code/WebKit/Source/WebKit/UIProcess/Automation -I/home/user/Code/WebKit/Source/WebKit/UIProcess/DigitalCredentials -I/home/user/Code/WebKit/Source/WebKit/UIProcess/Downloads -I/home/user/Code/WebKit/Source/WebKit/UIProcess/Gamepad -I/home/user/Code/WebKit/Source/WebKit/UIProcess/GPU -I/home/user/Code/WebKit/Source/WebKit/UIProcess/Inspector -I/home/user/Code/WebKit/Source/WebKit/UIProcess/Inspector/Agents -I/home/user/Code/WebKit/Source/WebKit/UIProcess/Launcher -I/home/user/Code/WebKit/Source/WebKit/UIProcess/Media -I/home/user/Code/WebKit/Source/WebKit/UIProcess/Model -I/home/user/Code/WebKit/Source/WebKit/UIProcess/Network -I/home/user/Code/WebKit/Source/WebKit/UIProcess/Network/CustomProtocols -I/home/user/Code/WebKit/Source/WebKit/UIProcess/Notifications -I/home/user/Code/WebKit/Source/WebKit/UIProcess/Plugins -I/home/user/Code/WebKit/Source/WebKit/UIProcess/RemoteLayerTree -I/home/user/Code/WebKit/Source/WebKit/UIProcess/UserContent -I/home/user/Code/WebKit/Source/WebKit/UIProcess/WebAuthentication -I/home/user/Code/WebKit/Source/WebKit/UIProcess/WebAuthentication/Mock -I/home/user/Code/WebKit/Source/WebKit/UIProcess/WebsiteData -I/home/user/Code/WebKit/Source/WebKit/UIProcess/XR -I/home/user/Code/WebKit/Source/WebKit/WebProcess -I/home/user/Code/WebKit/Source/WebKit/WebProcess/ApplePay -I/home/user/Code/WebKit/Source/WebKit/WebProcess/ApplicationCache -I/home/user/Code/WebKit/Source/WebKit/WebProcess/Automation -I/home/user/Code/WebKit/Source/WebKit/WebProcess/Cache -I/home/user/Code/WebKit/Source/WebKit/WebProcess/Databases -I/home/user/Code/WebKit/Source/WebKit/WebProcess/Databases/IndexedDB -I/home/user/Code/WebKit/Source/WebKit/WebProcess/EncryptedMedia -I/home/user/Code/WebKit/Source/WebKit/WebProcess/FileAPI -I/home/user/Code/WebKit/Source/WebKit/WebProcess/FullScreen -I/home/user/Code/WebKit/Source/WebKit/WebProcess/Gamepad -I/home/user/Code/WebKit/Source/WebKit/WebProcess/Geolocation -I/home/user/Code/WebKit/Source/WebKit/WebProcess/GPU -I/home/user/Code/WebKit/Source/WebKit/WebProcess/GPU/ShapeDetection -I/home/user/Code/WebKit/Source/WebKit/WebProcess/GPU/graphics -I/home/user/Code/WebKit/Source/WebKit/WebProcess/GPU/graphics/WebGPU -I/home/user/Code/WebKit/Source/WebKit/WebProcess/GPU/media -I/home/user/Code/WebKit/Source/WebKit/WebProcess/GPU/webrtc -I/home/user/Code/WebKit/Source/WebKit/WebProcess/IconDatabase -I/home/user/Code/WebKit/Source/WebKit/WebProcess/InjectedBundle -I/home/user/Code/WebKit/Source/WebKit/WebProcess/InjectedBundle/API -I/home/user/Code/WebKit/Source/WebKit/WebProcess/InjectedBundle/API/c -I/home/user/Code/WebKit/Source/WebKit/WebProcess/InjectedBundle/DOM -I/home/user/Code/WebKit/Source/WebKit/WebProcess/Inspector -I/home/user/Code/WebKit/Source/WebKit/WebProcess/Launching -I/home/user/Code/WebKit/Source/WebKit/WebProcess/MediaCache -I/home/user/Code/WebKit/Source/WebKit/WebProcess/MediaStream -I/home/user/Code/WebKit/Source/WebKit/WebProcess/Model -I/home/user/Code/WebKit/Source/WebKit/WebProcess/Network -I/home/user/Code/WebKit/Source/WebKit/WebProcess/Network/webrtc -I/home/user/Code/WebKit/Source/WebKit/WebProcess/Notifications -I/home/user/Code/WebKit/Source/WebKit/WebProcess/OriginData -I/home/user/Code/WebKit/Source/WebKit/WebProcess/Plugins -I/home/user/Code/WebKit/Source/WebKit/WebProcess/Plugins/Netscape -I/home/user/Code/WebKit/Source/WebKit/WebProcess/ResourceCache -I/home/user/Code/WebKit/Source/WebKit/WebProcess/Speech -I/home/user/Code/WebKit/Source/WebKit/WebProcess/Storage -I/home/user/Code/WebKit/Source/WebKit/WebProcess/UserContent -I/home/user/Code/WebKit/Source/WebKit/WebProcess/WebCoreSupport -I/home/user/Code/WebKit/Source/WebKit/WebProcess/WebPage -I/home/user/Code/WebKit/Source/WebKit/WebProcess/WebPage/RemoteLayerTree -I/home/user/Code/WebKit/Source/WebKit/WebProcess/WebStorage -I/home/user/Code/WebKit/Source/WebKit/WebProcess/XR -I/home/user/Code/WebKit/Source -I/home/user/Code/WebKit/WebKitLibraries -I/home/user/Code/WebKit/Source/WebKit/Shared/skia -I/home/user/Code/WebKit/build/DerivedSources/WebKit/wpe -I/home/user/Code/WebKit/build/DerivedSources/ForwardingHeaders/wpe -I/home/user/Code/WebKit/build/DerivedSources/ForwardingHeaders/wpe-web-process-extension -I/home/user/Code/WebKit/Source/WebKit/NetworkProcess/glib -I/home/user/Code/WebKit/Source/WebKit/NetworkProcess/soup -I/home/user/Code/WebKit/Source/WebKit/Platform/IPC/glib -I/home/user/Code/WebKit/Source/WebKit/Platform/IPC/unix -I/home/user/Code/WebKit/Source/WebKit/Platform/classifier -I/home/user/Code/WebKit/Source/WebKit/Platform/generic -I/home/user/Code/WebKit/Source/WebKit/Shared/API/c/wpe -I/home/user/Code/WebKit/Source/WebKit/Shared/API/glib -I/home/user/Code/WebKit/Source/WebKit/Shared/CoordinatedGraphics -I/home/user/Code/WebKit/Source/WebKit/Shared/CoordinatedGraphics/threadedcompositor -I/home/user/Code/WebKit/Source/WebKit/Shared/glib -I/home/user/Code/WebKit/Source/WebKit/Shared/libwpe -I/home/user/Code/WebKit/Source/WebKit/Shared/soup -I/home/user/Code/WebKit/Source/WebKit/Shared/wpe -I/home/user/Code/WebKit/Source/WebKit/UIProcess/API/C/cairo -I/home/user/Code/WebKit/Source/WebKit/UIProcess/API/C/glib -I/home/user/Code/WebKit/Source/WebKit/UIProcess/API/C/wpe -I/home/user/Code/WebKit/Source/WebKit/UIProcess/API/glib -I/home/user/Code/WebKit/Source/WebKit/UIProcess/API/libwpe -I/home/user/Code/WebKit/Source/WebKit/UIProcess/API/wpe -I/home/user/Code/WebKit/Source/WebKit/UIProcess/CoordinatedGraphics -I/home/user/Code/WebKit/Source/WebKit/UIProcess/Inspector/glib -I/home/user/Code/WebKit/Source/WebKit/UIProcess/Launcher/glib -I/home/user/Code/WebKit/Source/WebKit/UIProcess/Launcher/libwpe -I/home/user/Code/WebKit/Source/WebKit/UIProcess/Notifications/glib -I/home/user/Code/WebKit/Source/WebKit/UIProcess/geoclue -I/home/user/Code/WebKit/Source/WebKit/UIProcess/glib -I/home/user/Code/WebKit/Source/WebKit/UIProcess/gstreamer -I/home/user/Code/WebKit/Source/WebKit/UIProcess/linux -I/home/user/Code/WebKit/Source/WebKit/UIProcess/soup -I/home/user/Code/WebKit/Source/WebKit/UIProcess/wpe -I/home/user/Code/WebKit/Source/WebKit/WebProcess/InjectedBundle/API/glib -I/home/user/Code/WebKit/Source/WebKit/WebProcess/InjectedBundle/API/wpe -I/home/user/Code/WebKit/Source/WebKit/WebProcess/WebCoreSupport/soup -I/home/user/Code/WebKit/Source/WebKit/WebProcess/WebPage/CoordinatedGraphics -I/home/user/Code/WebKit/Source/WebKit/WebProcess/WebPage/dmabuf -I/home/user/Code/WebKit/Source/WebKit/WebProcess/WebPage/glib -I/home/user/Code/WebKit/Source/WebKit/WebProcess/WebPage/libwpe -I/home/user/Code/WebKit/Source/WebKit/WebProcess/WebPage/wpe -I/home/user/Code/WebKit/Source/WebKit/WebProcess/glib -I/home/user/Code/WebKit/Source/WebKit/WebProcess/soup -I/home/user/Code/WebKit/build/JavaScriptCoreGLib/DerivedSources/jsc -I/home/user/Code/WebKit/Source/ThirdParty/skia -I/home/user/Code/WebKit/build/Skia/Headers -I/home/user/Code/WebKit/build/JavaScriptCore/Headers -I/home/user/Code/WebKit/build/JavaScriptCore/PrivateHeaders -I/home/user/Code/WebKit/build/JavaScriptCoreGLib/Headers -I/home/user/Code/WebKit/build/JavaScriptCoreGLib/DerivedSources -I/home/user/Code/WebKit/build/WTF/Headers -I/home/user/Code/WebKit/Source/ThirdParty/libsysprof-capture -I/home/user/Code/WebKit/build/bmalloc/Headers -I/home/user/Code/WebKit/build/ANGLE/Headers -isystem /usr/include/gio-unix-2.0 -isystem /usr/lib64/libffi/include -isystem /usr/include/glib-2.0 -isystem /usr/lib64/glib-2.0/include -isystem /usr/include/libmount -isystem /usr/include/blkid -isystem /usr/include/libsoup-3.0 -isystem /usr/include/atk-1.0 -isystem /usr/include/gstreamer-1.0 -isystem /usr/include/orc-0.4 -isystem /usr/include/wpe-1.0 -isystem /usr/include/at-spi2-atk/2.0 -isystem /usr/include/libxml2 -isystem /usr/include/harfbuzz -isystem /usr/include/avif -isystem /usr/include/libdrm -fdiagnostics-color=always -Wextra -Wall -pipe -fmax-errors=20 -Wno-odr -Wno-stringop-overread -Wno-stringop-overflow -Wno-nonnull -Wno-array-bounds -Wno-expansion-to-defined -Wno-noexcept-type -Wno-psabi -Wno-misleading-indentation -Wno-maybe-uninitialized -Wundef -Wpointer-arith -Wmissing-format-attribute -Wformat-security -Wcast-align -Wno-tautological-compare -fasynchronous-unwind-tables -fno-strict-aliasing -fno-exceptions -fno-rtti -fcoroutines -ffunction-sections -fdata-sections -O2 -g -DNDEBUG -std=c++23 -fPIC -fvisibility=hidden -fvisibility-inlines-hidden -include /home/user/Code/WebKit/Source/WebKit/WebKit2Prefix.h -Wno-unused-parameter -DWPE_ENABLE_XKB=1 -pthread -DHAVE_HB_FEATURES_H -DHWY_SHARED_DEFINE -DAVIF_DLL -MD -MT Source/WebKit/CMakeFiles/WebKit.dir/__/__/DerivedSources/WebKit/unified-sources/UnifiedSource-13fb4697-10.cpp.o -MF Source/WebKit/CMakeFiles/WebKit.dir/__/__/DerivedSources/WebKit/unified-sources/UnifiedSource-13fb4697-10.cpp.o.d -o Source/WebKit/CMakeFiles/WebKit.dir/__/__/DerivedSources/WebKit/unified-sources/UnifiedSource-13fb4697-10.cpp.o -c /home/user/Code/WebKit/build/DerivedSources/WebKit/unified-sources/UnifiedSource-13fb4697-10.cpp In file included from /home/user/Code/WebKit/build/DerivedSources/WebKit/unified-sources/UnifiedSource-13fb4697-10.cpp:1: /home/user/Code/WebKit/Source/WebKit/GPUProcess/media/RemoteAudioDestinationManager.cpp: In constructor ‘WebKit::RemoteAudioDestination::RemoteAudioDestination(WebKit::GPUConnectionToWebProcess&, const WTF::String&, uint32_t, uint32_t, float, float, IPC::Semaphore&&)’: /home/user/Code/WebKit/Source/WebKit/GPUProcess/media/RemoteAudioDestinationManager.cpp:62:41: error: ‘uniqueLogIdentifier’ is not a member of ‘WTF::LoggerHelper’ 62 | , m_logIdentifier(LoggerHelper::uniqueLogIdentifier()) | ^~~~~~~~~~~~~~~~~~~ /home/user/Code/WebKit/Source/WebKit/GPUProcess/media/RemoteAudioDestinationManager.cpp: In member function ‘WTFLogChannel& WebKit::RemoteAudioDestination::logChannel() const’: /home/user/Code/WebKit/Source/WebKit/GPUProcess/media/RemoteAudioDestinationManager.cpp:168:48: error: ‘WebKit2LogMedia’ was not declared in this scope 168 | WTFLogChannel& logChannel() const { return WebKit2LogMedia; } | ^~~~~~~~~~~~~~~ [1032/1268] Building CXX object Source/WebKit/CMakeFiles/WebKit.dir/__/__/DerivedSources/WebKit/GeneratedSerializers.cpp.o ninja: build stopped: subcommand failed.
Attachments
Add attachment
proposed patch, testcase, etc.
tusooa
Comment 1
2024-09-19 11:43:59 PDT
I'm building WPE, not WebKitGTK, as indicated by the configuration command.
Adrian Perez
Comment 2
2024-09-29 13:14:25 PDT
Good catch, there are a couple !RELEASE_LOG_ENABLED guards missing.
Adrian Perez
Comment 3
2024-09-29 14:44:06 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34429
EWS
Comment 4
2024-09-30 15:29:58 PDT
Committed
284467@main
(4ae6006f1271): <
https://commits.webkit.org/284467@main
> Reviewed commits have been landed. Closing PR #34429 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug