[WPE] Compilation error ‘uniqueLogIdentifier’ is not a member of ‘WTF::LoggerHelper’ https://bugs.webkit.org/show_bug.cgi?id=279988

Reviewed by Darin Adler.

* Source/WebKit/GPUProcess/media/RemoteAudioDestinationManager.cpp:
  Guard logging inside !RELEASE_LOG_DISABLED guards.

Canonical link: https://commits.webkit.org/284467@main